--- a/pages/components/styles/navbar.scss
+++ b/pages/components/styles/navbar.scss
@@ -1,13 +1,11 @@
 .navbar {
-    .navbar-link {
+    .navbar-single-link {
         font-size: 14px;
-        font-weight: 200;
-        transition: text-shadow .3s;
-        margin: 10px 0;
-        transition: font-weight .2s;
+        font-weight: 400;
+        transition: .3s ease-in-out;
 
         &:hover {
-            font-weight: 400;
+            opacity: .8;
         }
     }
 
@@ -38,21 +36,12 @@
     .navbar-language {
         font-weight: 900;
         cursor: pointer;
-        margin: 0 .5rem;
+        font-size: 14px;
 
         &:hover {
             transition: .3s ease-in-out;
             color: $brown;
         }
-    }
-
-    .menuOverlay-wrapper {
-        display: flex;
-        justify-content: flex-end;
-        position: absolute;
-        top: 0;
-        background-color: #797A7E;
-        color: $whie;
     }
 
     .nav-bar {
@@ -71,6 +60,7 @@
         color: $whie;
         transform: translateX(100%);
         transition: transform 450ms ease-in-out;
+
         .overlay {
             font-size: 32px !important;
             letter-spacing: 2px;
@@ -79,6 +69,7 @@
 
     .nav-bar.nav-toggle {
         transform: translateX(0);
+        transition: .3s ease-in-out;
     }
 
     .nav-bar ul {
@@ -87,18 +78,13 @@
         padding: 0;
     }
 
-    .nav-bar li {
-        opacity: 0;
-        transform: translateX(20px);
-        transition: opacity 0.4s, transform 0.4s;
-
-        a {
-            font-size: 32px;
-        }
-    }
-
+    
     .nav-bar.nav-toggle li {
         opacity: 1;
         transform: translateX(0);
+    }
+    .menu-overlay-li a {
+        font-size: 32px;
+        transition: all .3s ease-in-out;
     }
 }
