--- a/pages/components/styles/heroSection.scss
+++ b/pages/components/styles/heroSection.scss
@@ -1,5 +1,5 @@
 .hero-section {
-    height: calc(100vh - 12rem);
+    height: calc(100vh);
     display: flex;
     align-items: center;
     justify-content: center;
