005 add Card and whyUs section

--- a/pages/components/styles/all.scss
+++ b/pages/components/styles/all.scss
@@ -2,3 +2,6 @@
 @import './navbar.scss';
 @import './heroSection.scss';
 @import './aboutMe.scss';
+@import './offerSection.scss';
+@import './projectCard.scss';
+@import './whyUs.scss';
