--- a/pages/components/styles/aboutMe.scss
+++ b/pages/components/styles/aboutMe.scss
@@ -28,6 +28,6 @@
 .bg {
     position: absolute;
     z-index: -2;
-    background-color: $background;
+    // background-color: $background;
     width: 100%;
 }
