--- a/pages/components/styles/navbar.scss
+++ b/pages/components/styles/navbar.scss
@@ -1,4 +1,7 @@
 .navbar {
+    position: sticky;
+    background-color: $whie;
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
     .navbar-single-link {
         font-size: 14px;
         font-weight: 400;
