fix-routing-and-language

--- a/src/components/styles/aboutMe.module.scss
+++ b/src/components/styles/aboutMe.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: $dark;
+    color: #0000;
 
     .about-me-header {
         font-weight: 700;
