--- a/src/components/styles/globalColors.scss
+++ b/src/components/styles/globalColors.scss
@@ -1,5 +1,5 @@
-$dark: #171717;
-$absolute_dark: #000;
-$brown: #544C4A;
-$whie: #ffff;
-$background: #DCDCDC;
+$dark: #000000;
+$orange: #985B00;
+$warmGrey: #EEECEC;
+$darkBlue: #0D0B60;
+$darkGrey: #DEDCDC;
