--- a/src/components/styles/navbar.scss
+++ b/src/components/styles/navbar.scss
@@ -1,7 +1,8 @@
 .navbar {
     position: sticky;
-    background-color: $whie;
-    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+    height: 149px;
+    display: flex;
+
     .navbar-single-link {
         font-size: 14px;
         font-weight: 400;
@@ -28,7 +29,10 @@
     }
 
     .navbar-button-close {
-        color: $whie;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        z-index: 10;
     }
 
     .navbar-link-wrapper {
@@ -43,26 +47,26 @@
 
         &:hover {
             transition: .3s ease-in-out;
-            color: $brown;
         }
     }
 
     .nav-bar {
         height: calc(100vh + 54px);
         display: flex;
+        max-width: 400px;
         position: fixed;
         top: 0;
-        right: 0;
+        left: -30%;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         gap: 1.2rem;
-        width: 100vw;
-        padding: 4rem 2.2rem;
-        background-color: $absolute_dark;
-        color: $whie;
-        transform: translateX(100%);
-        transition: transform 450ms ease-in-out;
+        z-index: 10;
+        width: 30vw;
+        padding: 8rem 4rem;
+        background-color: $warmGrey;
+        color: $dark;
+        transition: left 450ms ease-in-out;
 
         .overlay {
             font-size: 32px !important;
@@ -71,8 +75,8 @@
     }
 
     .nav-bar.nav-toggle {
-        transform: translateX(0);
-        transition: .3s ease-in-out;
+        left: 0;
+        transition: left .3s ease-in-out;
     }
 
     .nav-bar ul {
@@ -80,14 +84,7 @@
         margin: 0;
         padding: 0;
     }
-
-    
-    .nav-bar.nav-toggle li {
-        opacity: 1;
-        transform: translateX(0);
-    }
     .menu-overlay-li a {
-        font-size: 32px;
-        transition: all .3s ease-in-out;
+        font-size: 22px;
     }
 }
