--- a/src/components/styles/projectCard.scss
+++ b/src/components/styles/projectCard.scss
@@ -9,7 +9,7 @@
     .project-card-button {
         &:hover {
             transition: .3s ease-in-out ;
-            color: $brown;
+            // color: $brown;
         }
     }
 }
