--- a/src/components/styles/aboutMe.scss
+++ b/src/components/styles/aboutMe.scss
@@ -21,11 +21,34 @@
             flex-direction: column;
             gap: 1rem;
         }
+        .image-section-left {
+            position: relative;
+            display: inline-block;
+          }
+          
+          .image-section-left::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 2px solid transparent;
+            transition: border-color 0.3s ease;
+            opacity: .1;
+            box-sizing: border-box;
+          }
+          
+          .image-section-left:hover::before {
+            border-color: #a52a2a;
+            opacity: .1;
+          }
     }
 }
 
 .bg {
     position: absolute;
+    background-color: #EEECEC;
     z-index: -2;
     width: 100%;
 }
