--- a/src/components/styles/heroSection.scss
+++ b/src/components/styles/heroSection.scss
@@ -11,4 +11,10 @@
         font-style: italic;
         font-weight: 100;
     }
+
+}
+.carousel-indicators [data-bs-target] {
+    border-radius: 100%;
+    width: 10px;
+    height: 10px;
 }
