012 add paths and new design

--- a/src/components/styles/all.scss
+++ b/src/components/styles/all.scss
@@ -6,3 +6,5 @@
 @import './whyUs.scss';
 @import './navbar.scss';
 @import './menuOverlay.scss';
+@import './sliderLogo.scss';
+@import './email.scss';
