--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,9 +38,24 @@ h2 {
     font-family: 'PPHatton-Light';
     text-transform: uppercase;
 }
+h3 {
+    font-family: 'PPHatton-Light';
+    text-transform: uppercase;
+    font-size: 28px;
+}
 
 h4 {
     font-family: 'PPHatton-light';
+}
+h6 {
+    font-family: 'PPHatton-Light';
+    font-size: 24px;
+    color:rgb(0, 0, 0);
+
+}
+p, li {
+    font-family: 'PPHatton-light';
+    color:rgb(0, 0, 0);
 }
 
 .textButtonWrapper {
@@ -55,4 +70,10 @@ h4 {
 
 .textButtonWrapper:hover {
     color: #7393B3;
+}
+
+.bg {
+    position: absolute;
+    z-index: -2;
+    width: 100%;
 }
