--- a/src/components/styles/navbar.scss
+++ b/src/components/styles/navbar.scss
@@ -77,6 +77,8 @@
         width: 100%;
         font-size: 22px;
         transition: .3s ease;
+        border-right: 1px solid black;
+        box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
     }
 
     .nav-bar ul {
