--- a/src/components/styles/aboutMe.scss
+++ b/src/components/styles/aboutMe.scss
@@ -1,6 +1,6 @@
 .about-me-section {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     color: #0000;
 
