--- a/src/components/styles/aboutMe.scss
+++ b/src/components/styles/aboutMe.scss
@@ -1,6 +1,6 @@
 .about-me-section {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     color: #0000;
 
@@ -30,11 +30,6 @@
             transition: border-color 0.3s ease;
             opacity: .1;
             box-sizing: border-box;
-          }
-          
-          .image-section-left:hover::before {
-            border-color: #a52a2a;
-            opacity: .1;
           }
     }
 }
